# django_4_example

./: .gitignore  README.md  pyproject.toml
blog/: pyproject.toml  pyrightconfig.json
blog/mysite/: db.sqlite3
blog/mysite/blog/: admin.py  models.py  urls.py  views.py
blog/mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
blog/mysite/blog/templates/: paginator.html
blog/mysite/blog/templates/blog/: base.html
blog/mysite/blog/templates/blog/post/: comment.html  detail.html  list.html  share.html
blog/mysite/blog/templates/blog/post/includes/: comment_form.html
blog/mysite/mysite/: .env.template  __init__.py  settings.py  urls.py
bookmarks/: pyproject.toml
bookmarks/bookmarks/: .env.template
bookmarks/bookmarks/account/: forms.py  models.py  urls.py  views.py
bookmarks/bookmarks/account/migrations/: 0001_initial.py
bookmarks/bookmarks/account/templates/: base.html
bookmarks/bookmarks/account/templates/registration/: login.html  password_re-set_confirm.html  password_re-set_done.html  password_reset_complete.html  password_reset_form.html
bookmarks/bookmarks/bookmarks/: settings.py  urls.py
