[tool.poetry]
name = "django-4-example"
version = "0.1.0"
description = ""
authors = ["Igor Ponomarev <9129910001@mail.ru>"]
readme = "README.md"
packages = [{include = "django_4_example"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
django-stubs = "^4.2.4"
django-types = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
