[project]
name = "django-4-example"
version = "0.1.0"
description = ""
authors = [{ name = "Igor Ponomarev", email = "9129910001@mail.ru" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "django>=4.2.6,<5",
    "django-stubs>=4.2.4,<5",
    "django-types>=0.18.0,<0.19",
    "python-dotenv>=1.0.0,<2",
    "django-taggit>=5.0.1,<6",
    "markdown==3.4.1",
    "psycopg2-binary>=2.9.10,<3",
]

[dependency-groups]
dev = ["django-template-lsp>=0.9.5,<0.10"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
